# AlpacaStockStreamer

./: Cargo.toml
src/: main.rs  stream.rs
src/alpaca_api/: mod.rs
