[package]
name = "alpaca-stock-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures-util = { version = "0.3.28", features = ["sink"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["tokio-native-tls", "native-tls"] }
tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.0"
